--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "job-listing-tailwind-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "./",
+  "homepage": ".",
   "dependencies": {
     "@craco/craco": "^6.3.0",
     "@testing-library/jest-dom": "^5.14.1",
@@ -14,10 +14,10 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "build:css" : "npx tailwindcss -i src/styles/tailwind.src.css -o src/styles/style.css",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "build:css": "npx tailwindcss -i src/styles/tailwind.src.css -o src/styles/style.css",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
